@@ -14,13 +14,13 @@ public class TestMain extends MBServerPlugin{
 	@Override
 	public void onEnable() {
 		
-		//Get the MBEssentials plugin reference remeber to cast to it to MBEPlugin
+		//Get the MBEssentials plugin reference. Remeber to cast to it to MBEPlugin!
 		MBEPlugin Mbes = (MBEPlugin) this.getPluginManager().getPlugin("MBEssentials");
 		
 		//Get the LogManager from the plugin
 		LogManager log = Mbes.getLogManager();
 		
-		//Make a logger the string tells the logmanager where to create the log
+		//Make a logger. The string tells the logmanager where to create the log
 		Logger myLog = new Logger("plugins\\"); 
 		// You can do this Logger myLog = new Logger(new File("plugins\\mylog.txt")); it will overide the default name      
 		
@@ -32,6 +32,7 @@ public class TestMain extends MBServerPlugin{
 			// You can also do this log.writeLog("Im logging this",myLog.getId(),false);
 		} catch (IOException e) {
 			e.printStackTrace();
+			//Print the stacktrace if anything goes wrong with the logging
 		}
 	}
 
